fix style scrollbar

--- a/src/assets/style/styleScrollbar.scss
+++ b/src/assets/style/styleScrollbar.scss
@@ -11,7 +11,7 @@
 ::-webkit-scrollbar-thumb {
   // background: url('../img/textureScrollbar.JPG') no-repeat;
   background: url('../img/textureScrollbar.JPG') repeat;
-  background-size: contain;
+  background-size: 100%;
 }
 
 // width: 10px; /* Larghezza della scrollbar */
